# people-api

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  python-package.yml  snyk-container.yml
people_api/: app.py
