[tool.poetry]
name = "api-example"
version = "0.1.0"
description = ""
authors = ["Gary Clark <gclark@xccelerated.io>"]
readme = "README.md"
packages = [{include = "people_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
